add generics - (type safety) and switch the collection use to the 'new' collection apis